@@ -171,7 +171,79 @@ UI.click = function(){
 };
 
 UI.init = function(){
-    startButton = new UI(null,width/2-100,height/2-40,200,80,function(){
+    // "scene" wrappers
+
+    mainMenu = new UI(null,0,0,width,height);
+    basinCreationMenu = new UI(null,0,0,width,height,undefined,undefined,false);
+    primaryWrapper = new UI(null,0,0,width,height,undefined,undefined,false);
+
+    // main menu
+
+    mainMenu.append(false,width/2,height/4,0,0,function(){  // title text
+        fill(0);
+        noStroke();
+        textAlign(CENTER,CENTER);
+        textSize(36);
+        text("Very Sad HHW Thing*",0,0); // sad
+        textSize(18);
+        textStyle(ITALIC);
+        text("An experimental tropical cyclone simulator",0,40);
+        textSize(12);
+        text("*There will be a better name in the future",0,300);
+    });
+
+    let stupid = [  // Yellow text stuff
+        "This yellow text totally isn't from MC",
+        "World's finest bad weather simulator",
+        "Monsoonjr99's latest piece of autism", // I am actually autistic don't judge me
+        "Not a tornado",
+        "Bugs guaranteed!",
+        "Category 5 tropical wave",
+        "Experimental!",
+        "Inspired by Scratch",
+        "Unlimited wind shear",
+        "Very sad",
+        "Contains sneaux"
+    ];
+
+    let yellowText = mainMenu.append(false,2*width/3,height/4-40,0,0,function(){ // Stupid yellow text (totally not MC inspired)
+        fill(240,240,0);
+        noStroke();
+        textAlign(CENTER,CENTER);
+        rotate(PI/16);
+        textSize(14+2*sin(TAU*millis()/750));
+        text(this.txt,0,0);
+    });
+
+    yellowText.txt = random(stupid).toUpperCase();
+
+    mainMenu.append(false,width/2-100,height/2-40,200,80,function(){    // "New Basin" button
+        fill(200,200,200,100);
+        noStroke();
+        this.fullRect();
+        if(this.isHovered()) this.fullRect();
+        fill(0);
+        textAlign(CENTER,CENTER);
+        textSize(24);
+        text("New Basin",100,40);
+    },function(){
+        // init();
+        mainMenu.hide();
+        basinCreationMenu.show();
+    });
+
+    // basin creation menu
+
+    basinCreationMenu.append(false,width/2,height/4,0,0,function(){ // insert settings here
+        fill(0);
+        noStroke();
+        textAlign(CENTER,CENTER);
+        textSize(36);
+        textStyle(ITALIC);
+        text("[Insert settings here] WIP",0,0);
+    });
+
+    basinCreationMenu.append(false,width/2-100,height/2-40,200,80,function(){    // "Start" button
         fill(200,200,200,100);
         noStroke();
         this.fullRect();
@@ -182,17 +254,19 @@ UI.init = function(){
         text("Start",100,40);
     },function(){
         init();
-        this.hide();
+        basinCreationMenu.hide();
     });
 
-    topBar = new UI(null,0,0,width,30,function(){
+    // primary "in sim" scene
+
+    let topBar = primaryWrapper.append(false,0,0,width,30,function(){   // Top bar
         fill(200,200,200,100);
         noStroke();
         this.fullRect();
         textSize(18);
-    },false,false);
+    },false);//,false);
 
-    dateUI = topBar.append(false,5,3,100,24,function(){
+    topBar.append(false,5,3,100,24,function(){  // Date indicator
         let txtStr = tickMoment(viewTick).format(TIME_FORMAT) + (viewingPresent() ? '' : ' [Analysis]');
         this.setBox(undefined,undefined,textWidth(txtStr)+6);
         if(this.isHovered()) this.fullRect();
@@ -203,69 +277,71 @@ UI.init = function(){
         dateNavigator.toggleShow();
     });
 
-    dateNavigator = new UI(null,0,30,140,50,function(){
+    dateNavigator = primaryWrapper.append(false,0,30,140,50,function(){     // Analysis navigator panel
         fill(200,200,200,140);
         noStroke();
         this.fullRect();
     },true,false);
 
-    for(let i=0;i<8;i++){
+    let navButtonRend = function(){     // Navigator button render function
+        if(this.isHovered()){
+            fill(200,200,200,100);
+            this.fullRect();
+        }
+        if(paused) fill(0);
+        else fill(130);
+        if(this.metadata%2===0) triangle(2,8,10,2,18,8);
+        else triangle(2,2,18,2,10,8);
+    };
+
+    let navButtonClick = function(){    // Navigator button click function
+        if(paused){
+            let m = tickMoment(viewTick);
+            switch(this.metadata){
+                case 0:
+                m.add(TICK_DURATION*ADVISORY_TICKS,"ms");
+                break;
+                case 1:
+                m.subtract(TICK_DURATION*ADVISORY_TICKS,"ms");
+                break;
+                case 2:
+                m.add(1,"M");
+                break;
+                case 3:
+                m.subtract(1,"M");
+                break;
+                case 4:
+                m.add(1,"d");
+                break;
+                case 5:
+                m.subtract(1,"d");
+                break;
+                case 6:
+                m.add(1,"y");
+                break;
+                case 7:
+                m.subtract(1,"y");
+                break;
+            }
+            let t = floor((m.valueOf()-basin.startTime)/TICK_DURATION);
+            if(this.metadata%2===0 && t%ADVISORY_TICKS!==0) t = floor(t/ADVISORY_TICKS)*ADVISORY_TICKS;
+            if(this.metadata%2!==0 && t%ADVISORY_TICKS!==0) t = ceil(t/ADVISORY_TICKS)*ADVISORY_TICKS;
+            if(t>basin.tick) t = basin.tick;
+            if(t<0) t = 0;
+            viewTick = t;
+            refreshTracks();
+            Env.displayLayer();
+        }
+    };
+
+    for(let i=0;i<8;i++){   // Navigator buttons
         let x = floor(i/2)*30+15;
         let y = i%2===0 ? 10 : 30;
-        let rend = function(){
-            if(this.isHovered()){
-                fill(200,200,200,100);
-                this.fullRect();
-            }
-            if(paused) fill(0);
-            else fill(130);
-            if(this.metadata%2===0) triangle(2,8,10,2,18,8);
-            else triangle(2,2,18,2,10,8);
-        };
-        let clck = function(){
-            if(paused){
-                let m = tickMoment(viewTick);
-                switch(this.metadata){
-                    case 0:
-                    m.add(TICK_DURATION*ADVISORY_TICKS,"ms");
-                    break;
-                    case 1:
-                    m.subtract(TICK_DURATION*ADVISORY_TICKS,"ms");
-                    break;
-                    case 2:
-                    m.add(1,"M");
-                    break;
-                    case 3:
-                    m.subtract(1,"M");
-                    break;
-                    case 4:
-                    m.add(1,"d");
-                    break;
-                    case 5:
-                    m.subtract(1,"d");
-                    break;
-                    case 6:
-                    m.add(1,"y");
-                    break;
-                    case 7:
-                    m.subtract(1,"y");
-                    break;
-                }
-                let t = floor((m.valueOf()-basin.startTime)/TICK_DURATION);
-                if(this.metadata%2===0 && t%ADVISORY_TICKS!==0) t = floor(t/ADVISORY_TICKS)*ADVISORY_TICKS;
-                if(this.metadata%2!==0 && t%ADVISORY_TICKS!==0) t = ceil(t/ADVISORY_TICKS)*ADVISORY_TICKS;
-                if(t>basin.tick) t = basin.tick;
-                if(t<0) t = 0;
-                viewTick = t;
-                refreshTracks();
-                Env.displayLayer();
-            }
-        };
-        let button = dateNavigator.append(false,x,y,20,10,rend,clck);
+        let button = dateNavigator.append(false,x,y,20,10,navButtonRend,navButtonClick);
         button.metadata = i;
     }
 
-    pauseButton = topBar.append(false,width-29,3,24,24,function(){
+    let pauseButton = topBar.append(false,width-29,3,24,24,function(){  // Pause/resume button
         if(this.isHovered()) this.fullRect();
         fill(0);
         if(paused) triangle(3,3,21,12,3,21);
@@ -277,7 +353,7 @@ UI.init = function(){
         paused = !paused;
     });
 
-    stormSelectUI = pauseButton.append(false,-105,0,100,24,function(){
+    pauseButton.append(false,-105,0,100,24,function(){  // Pause/speed/selected storm indicator
         let txtStr = "";
         if(selectedStorm){
             let sName = selectedStorm.getFullNameByTick(viewTick);
@@ -304,14 +380,14 @@ UI.init = function(){
         if(!selectedStorm) paused = !paused;
     });
 
-    bottomBar = new UI(null,0,height-30,width,30,function(){
+    let bottomBar = primaryWrapper.append(false,0,height-30,width,30,function(){    // Bottom bar
         fill(200,200,200,100);
         noStroke();
         this.fullRect();
         textSize(18);
-    },false,false);
+    },false);//,false);
 
-    envUI = bottomBar.append(false,5,3,100,24,function(){
+    bottomBar.append(false,5,3,100,24,function(){   // Map layer/environmental field indicator
         let txtStr = "Map Layer: ";
         if(Env.displaying!==-1){
             let f = Env.fieldList[Env.displaying];
