@@ -1,5 +1,9 @@
 About: A basic hurricane simulator made for the Hypothetical Hurricanes Wiki. Soon to be more advanced.
 
+v20181122a:
+    + Added a main menu
+        > Currently only has a "New Basin" button and some silly text
+    * Some minor improvements to UI
 v20181118a:
     + Added some now-commented-out bust attempt at improving the storm algorithm
     * Tweaks to storm 'type' determination
